force-app/main/default/objects/MUSW__Proceeding2__c/fields/CVRD_DS_Application__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Proceedings</relationshipLabel>
    <relationshipName>Proceedings</relationshipName>
    <type>Lookup</type>
</CustomField>