force-app/main/default/objects/MUSW__Proceeding2__c/fields/CVRD_DS_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>