force-app/main/default/objects/MUSW__Proceeding2__c/fields/CVRD_DS_Comment__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>