force-app/main/default/objects/MUSW__Proceeding2__c/fields/CVRD_DS_Electoral_Area__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Electoral_Area__c</fullName>
    <label>Electoral Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MUSW__Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>