force-app/main/default/objects/MUSW__Proceeding2__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Hearing</fullName>
            </value>
            <value>
                <fullName>Public Information Meeting</fullName>
            </value>
            <value>
                <fullName>Advisory Planning Commission</fullName>
            </value>
            <value>
                <fullName>Community Parks Advisory Commission</fullName>
            </value>
            <value>
                <fullName>Board of Variance</fullName>
            </value>
            <value>
                <fullName>Board Meeting</fullName>
            </value>
            <value>
                <fullName>EASC Meeting</fullName>
            </value>
            <value>
                <fullName>BOV</fullName>
                <isActive>false</isActive>
                <label>BOV</label>
            </value>
            <value>
                <fullName>Board Approval</fullName>
                <isActive>false</isActive>
                <label>Board Approval</label>
            </value>
            <value>
                <fullName>Board Of Variance Hearing</fullName>
                <isActive>false</isActive>
                <label>Board Of Variance Hearing</label>
            </value>
            <value>
                <fullName>Bylaw Reading</fullName>
                <isActive>false</isActive>
                <label>Bylaw Reading</label>
            </value>
            <value>
                <fullName>Bylaw Reading 2</fullName>
                <isActive>false</isActive>
                <label>Bylaw Reading 2</label>
            </value>
            <value>
                <fullName>Bylaw Reading 3</fullName>
                <isActive>false</isActive>
                <label>Bylaw Reading 3</label>
            </value>
            <value>
                <fullName>Hearing</fullName>
                <isActive>false</isActive>
                <label>Hearing</label>
            </value>
            <value>
                <fullName>Judicial</fullName>
                <isActive>false</isActive>
                <label>Judicial</label>
            </value>
            <value>
                <fullName>Moti Feedback</fullName>
                <isActive>false</isActive>
                <label>Moti Feedback</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>